@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5721
+Fix c_compiler so it's case insensitive.
+
 ; Feature ; Major ; Compiler ; #5515
 Turned on initial variability propagation by default.
 
